postgress_k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: security
  labels:
    app: postgres
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      tier: backend
  template:
    metadata:
      labels:
        app: postgres
        tier: backend
    spec:
      securityContext: 
        runAsNonRoot: true
        runAsUser:  999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: db-postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: c-db-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: pgdata
              name: postgres-db
            
      volumes:
        - name: postgres-db
          persistentVolumeClaim:
            claimName: db-pvc
