postgress_k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: security
  labels:
    app: db-svc
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: postgres
    tier: backend
  ports:
    - port: 5432
      name: db-svc-port
      targetPort: c-db-port
